--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@auth/mongodb-adapter": "^3.8.0",
     "@hookform/resolvers": "^5.0.1",
+    "@radix-ui/react-label": "^2.1.3",
+    "@radix-ui/react-slot": "^1.2.0",
     "@tanstack/react-query": "^5.74.3",
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.6.0",
